--- a/webapp/src/components/Carousel.css
+++ b/webapp/src/components/Carousel.css
@@ -21,7 +21,7 @@
   justify-content: space-between;
   border: 1px solid #555;
   border-radius: calc(var(--outer-r) - var(--p-distance));
-  background-color: #0d0d0d;
+  background-color: #991b1b;
   overflow: hidden;
   cursor: grab;
 }
