--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -5,12 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* Manter o fundo escuro e texto branco que tínhamos antes */
-  background-color: #111827;
-  color: white;
+  background: linear-gradient(135deg, #fffff0 0%, #fff8dc 100%);
+  color: #000000;
 }
 
-/* Garantir que a nossa app ocupa o ecrã todo */
 #root {
   width: 100%;
   height: 100%;
