--- a/webapp/src/components/Navbar/Navbar.module.css
+++ b/webapp/src/components/Navbar/Navbar.module.css
@@ -67,6 +67,7 @@
   white-space: nowrap;
   position: relative;
   background: transparent;
+  text-decoration: none;
 }
 
 .tabButton.active.scrolled {
